# Chaotirender

./: .gitignore  CMakeLists.txt  README.md
chaotirender/: CMakeLists.txt
chaotirender/asset/grid_floor/: floor.material.json
chaotirender/asset/spot/: spot.material.json
chaotirender/engine/editor/: CMakeLists.txt
chaotirender/engine/editor/include/editor/: camera.h  editor_global_contex.h  editor_input_manager.h  render_scene.h  scene_manager.h  window_system.h
chaotirender/engine/editor/src/: camera.cpp  editor_global_contex.cpp  editor_input_manager.cpp  main.cpp  render_scene.cpp  scene_manager.cpp  window_system.cpp
chaotirender/engine/runtime/: CMakeLists.txt
chaotirender/engine/runtime/include/runtime/: asset_manager.h  buffer.h  buffer_list.h  camera.h  color.h  debug.h  engine.h  fragment.h  frame_buffer.h  geometry_processor.h  light.h  mesh_data.h  parallel.h  phong_pixel_shader.h  pipeline_global.h  pixel_processor.h  pixel_shader.h  process_geometry.h  rasterization.h  rasterize.h  rasterizer.h  render_object.h  render_pipeline.h  render_pipeline_global_context.h  render_resource.h  render_scene.h  simple_pixel_shader.h  simple_vertex_shader.h  test.h  texture.h  texture_pixel_shader.h  tgaimage.h  tick_tock.h  vertex_shader.h
chaotirender/engine/runtime/include/runtime/global/: engine_global_context.h
chaotirender/engine/runtime/include/runtime/pipeline/: process_geometry.h  rasterize.h  render_pipeline.h
chaotirender/engine/runtime/include/runtime/pipeline/data_type/: color.h  frame_buffer.h  pipeline_data_type.h  texture.h
chaotirender/engine/runtime/include/runtime/render/: camera.h  light.h  render_mesh.h  render_scene.h  render_system.h
chaotirender/engine/runtime/include/runtime/resource/: asset_manager.h  render_object.h  resource_type.h  scene_manager.h
chaotirender/engine/runtime/include/runtime/shader/: phong_pixel_shader.h  shadow_pixel_shader.h  shadow_vertex_shader.h  simple_pixel_shader.h  simple_vertex_shader.h  texture_pixel_shader.h
chaotirender/engine/runtime/include/runtime/shader/base/: pixel_shader.h  vertex_shader.h
chaotirender/engine/runtime/include/runtime/util/: json.h  tgaimage.h
chaotirender/engine/runtime/src/: asset_manager.cpp  camera.cpp  engine.cpp  fragment.cpp  frame_buffer.cpp  geometry_processor.cpp  main.cpp  parallel.cpp  phong_pixel_shader.cpp  pipeline_global.cpp  pixel_processor.cpp  process_geometry.cpp  rasterization.cpp  rasterize.cpp  rasterizer.cpp  render_object.cpp  render_pipeline.cpp  render_pipeline_global_context.cpp  render_resource.cpp  render_scene.cpp  simple_pixel_shader.cpp  simple_vertex_shader.cpp  texture.cpp  texture_pixel_shader.cpp  tgaimage.cpp
chaotirender/engine/runtime/src/global/: engine_global_context.cpp
chaotirender/engine/runtime/src/pipeline/: process_geometry.cpp  rasterize.cpp  render_pipeline.cpp
chaotirender/engine/runtime/src/pipeline/data_type/: frame_buffer.cpp  texture.cpp
chaotirender/engine/runtime/src/render/: camera.cpp  render_scene.cpp  render_system.cpp
chaotirender/engine/runtime/src/resource/: asset_manager.cpp  render_object.cpp  scene_manager.cpp
chaotirender/engine/runtime/src/shader/: phong_pixel_shader.cpp  shadow_pixel_shader.cpp  shadow_vertex_shader.cpp  simple_pixel_shader.cpp  simple_vertex_shader.cpp  texture_pixel_shader.cpp
chaotirender/engine/runtime/src/util/: json.cpp  tgaimage.cpp
