# 版本 blabla
cmake_minimum_required(VERSION 3.2)

if (NOT CMAKE_BUILD_TYPE)
	set(CMAKE_BUILD_TYPE Release)
endif()
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake;${CMAKE_MODULE_PATH}")

set(CHAOTIRENDER_BINARY_ROOT_DIR ${CMAKE_CURRENT_LIST_DIR}/bin)
set(ASSET_DIR ${CMAKE_CURRENT_LIST_DIR}/chaotirender/asset)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CHAOTIRENDER_BINARY_ROOT_DIR})

# 要写在 standard 后面
project(Chaotirender VERSION 0.1.0)

set(CHAOTIRENDER_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
set(CMAKE_INSTALL_PREFIX "${CHAOTIRENDER_ROOT_DIR}/bin")
set(BINARY_ROOT_DIR "${CMAKE_INSTALL_PREFIX}/")

# 添加子项目，调用子项目中的CMakeList.txt
add_subdirectory(chaotirender)